@@ -1,2 +1,2 @@
 #
-__version__ = '2.2.0.dev5'
+__version__ = '2.2.0.dev6'
