@@ -1,8 +1,18 @@
 Changes between 2.1.3 and XXX 2.2.0
 ----------------------------------------
 
-- new feature to help optimizing your tests: --durations=N option for 
-  displaying N slowest test calls and setup/teardown methods.
+- introduce registration for "pytest.mark.*" helpers via ini-files
+  or through plugin hooks.  Also introduce a "--strict" option which 
+  will treat unregistered markers as errors
+  allowing to avoid typos and maintain a well described set of markers
+  for your test suite.  See exaples at http://pytest.org/latest/mark.html
+  and its links.
+- XXX introduce "-m marker" option to select tests based on markers
+  (this is a stricter more predictable version of '-k' which also matches
+  substrings and compares against the test function name etc.)
+- new feature to help optimizing the speed of your tests: 
+  --durations=N option for displaying N slowest test calls 
+  and setup/teardown methods.
 - fix and cleanup pytest's own test suite to not leak FDs 
 - fix issue83: link to generated funcarg list
 - fix issue74: pyarg module names are now checked against imp.find_module false positives
